<package>
  <name>rocon_scheduler_requests</name>
  <version>0.6.6</version>
  <description>
    Python and C++ interfaces for managing ROCON scheduler requests.
  </description>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <license>BSD</license>  

  <url type="website">http://wiki.ros.org/rocon_scheduler_requests</url>
  <url type="repository">https://github.com/utexas-bwi/rocon_scheduler_requests.git</url>
  <url type="bugtracker">https://github.com/utexas-bwi/rocon_scheduler_requests/issues</url>
  <author>Jack O'Quin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>
  <build_depend>rostest</build_depend> <!-- testing only -->
  <build_depend>rocon_app_manager_msgs</build_depend>
  <build_depend>scheduler_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rocon_app_manager_msgs</run_depend>
  <run_depend>scheduler_msgs</run_depend>
  <run_depend>unique_id</run_depend>

  <test_depend>rosunit</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
